// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Refova /> Event handlers: handleSubmit calls \`submit\` with properly arguments when valid 1`] = `
Array [
  Object {
    "changed": Array [],
    "props": Object {
      "email": "example@icloud.com",
      "password": "qwerty",
    },
    "reset": [Function],
    "resetError": [Function],
    "setValue": [Function],
    "setValues": [Function],
    "values": Object {
      "email": "example@icloud.com",
      "password": "qwerty",
      "username": undefined,
    },
  },
]
`;

exports[`<Refova /> renders and pass down props 1`] = `
<Form
  changed={Array []}
  email="example@email.com"
  errors={
    Object {
      "email": "Domain is not allowed",
      "password": "Password should be at least 6 chars length",
    }
  }
  handleChange={[Function]}
  handleOnlyChange={[Function]}
  handleSubmit={[Function]}
  isValid={false}
  password="qwer"
  reset={[Function]}
  resetError={[Function]}
  setValue={[Function]}
  setValues={[Function]}
  username=""
  validate={[Function]}
  values={
    Object {
      "email": "example@email.com",
      "password": "qwer",
      "username": "",
    }
  }
/>
`;

exports[`<Refova /> renders without options 1`] = `
<Form
  changed={Array []}
  errors={Object {}}
  handleChange={[Function]}
  handleOnlyChange={[Function]}
  handleSubmit={[Function]}
  isValid={false}
  reset={[Function]}
  resetError={[Function]}
  setValue={[Function]}
  setValues={[Function]}
  validate={[Function]}
  values={Object {}}
/>
`;
